FIX: room details page buttons size on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -176,6 +176,11 @@ footer a {
     background-color: var(--buttons);
 }
 
+.btn-details:hover {
+    color: black;
+    background-color: var(--bgcolor3);
+}
+
 
 @media screen and (max-width: 767px) {
     img.logo {
